Add how to execute section to readme