@@ -2,8 +2,15 @@
 
 [![wakatime](https://wakatime.com/badge/user/79b829dd-95f8-4c1e-a888-ba43819814a5/project/5050fbe4-8406-40c6-8dcd-49f080271f2d.svg)](https://wakatime.com/badge/user/79b829dd-95f8-4c1e-a888-ba43819814a5/project/5050fbe4-8406-40c6-8dcd-49f080271f2d)
 
+## How to execute
 
-<figure><embed src="https://wakatime.com/share/@79b829dd-95f8-4c1e-a888-ba43819814a5/d7cbf443-77c1-4b4a-80b4-0dbed2db1b17.svg"></embed></figure>
+If you ask yourself why IntelliJ shows many things red, no worrie IntelliJ isn't updated to support these language features.
+
+So back to topic.
+Simply build it using gradle.
+
+1. `./gradlew clean build`
+2. `java --enable-preview -jar build/libs/java-22-test-1.0-SNAPSHOT.jar`
 
 
-<figure><embed src="https://wakatime.com/share/@79b829dd-95f8-4c1e-a888-ba43819814a5/c43551b6-3a08-4c57-9819-b1570cbecf4b.svg"></embed></figure>
+
